--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,13 +15,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Set up fireFox
+      uses: abhi1693/setup-browser@v0.3.4
+      with:
+        browser: firefox
+        version: latest
     - name: Run tests
       run: mvn clean test
     - name: Run cross browsers tests
