change fireFox to edge

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Set up fireFox
       uses: abhi1693/setup-browser@v0.3.4
       with:
-        browser: firefox
-        version: 134.0
+        browser: edge
+        version: latest
     - name: Run tests
       run: mvn clean test
     - name: Run cross browsers tests
