--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,11 +8,14 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
+  env:
+    USER: ${{secrets.SD_USER}}
+    PASS: ${{secrets.SD_PASSWORD}}
 jobs:
   build:
 
     runs-on: windows-latest
+
 
     steps:
     - name: Checkout
