--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,4 +35,4 @@ jobs:
     - name: Run tests
       run: mvn clean test
     - name: Run cross browsers tests
-      run: mvn clean test -DsuiteXmlFile='/src/test/resources/CrossBrowserTest.xml'
+      run: mvn clean test -Duser=$USER -Dpassword=$PASS
