--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,36 +1,36 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
 
-name: SouceDemo CI
+name: SauceDemo CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master"]
   pull_request:
     branches: [ "master" ]
 
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     env:
       USER: ${{secrets.SD_USER}}
       PASS: ${{secrets.SD_PASSWORD}}
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Set up fireFox
-      uses: abhi1693/setup-browser@v0.3.4
-      with:
-        browser: edge
-        version: latest
-    - name: Run tests
-      run: mvn clean test -Duser=$USER -Dpassword=$PASS
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Set up Edge
+        uses: abhi1693/setup-browser@v0.3.4
+        with:
+          browser: edge
+          version: latest
+      - name: Run tests
+        run: mvn clean test -Duser=$USER -Dpassword=$PASS
